# agents

./: pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
3_crew/my_debate/: pyproject.toml
3_crew/my_debate/output/: decide.md  oppose.md  propose.md
3_crew/my_debate/src/my_debate/: crew.py  main.py
3_crew/my_debate/src/my_debate/config/: agents.yaml  tasks.yaml
3_crew/my_eng_team/: README.md  pyproject.toml
3_crew/my_eng_team/src/my_eng_team/: main.py
3_crew/my_fin_researcher/: README.md  pyproject.toml  report.md
3_crew/my_fin_researcher/src/my_fin_researcher/: crew.py  main.py
3_crew/my_fin_researcher/src/my_fin_researcher/config/: agents.yaml  tasks.yaml
3_crew/my_stock_analyzer/: README.md  pyproject.toml
3_crew/my_stock_analyzer/memory/: chroma.sqlite3  long_term.db
3_crew/my_stock_analyzer/output/: decision.md  research_report.json  trending_companies.json
3_crew/my_stock_analyzer/src/my_stock_analyzer/: crew.py  main.py
3_crew/my_stock_analyzer/src/my_stock_analyzer/config/: agents.yaml
3_crew/my_stock_analyzer/src/my_stock_analyzer/tools/: push_tool.py
3_crew/mycoder/: pyproject.toml
3_crew/mycoder/src/mycoder/: crew.py  main.py
3_crew/mycoder/src/mycoder/config/: agents.yaml  tasks.yaml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  memory.db-shm  memory.db-wal
