[project]
name = "my_eng_team"
version = "0.1.0"
description = "my_eng_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
my_eng_team = "my_eng_team.main:run"
run_crew = "my_eng_team.main:run"
train = "my_eng_team.main:train"
replay = "my_eng_team.main:replay"
test = "my_eng_team.main:test"
run_with_trigger = "my_eng_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
