[project]
name = "my_stock_analyzer"
version = "0.1.0"
description = "my_stock_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.8.1",
]

[project.scripts]
my_stock_analyzer = "my_stock_analyzer.main:run"
run_crew = "my_stock_analyzer.main:run"
train = "my_stock_analyzer.main:train"
replay = "my_stock_analyzer.main:replay"
test = "my_stock_analyzer.main:test"
run_with_trigger = "my_stock_analyzer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
